apps/creatorwatch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creatorwatch-license
  namespace: creatorwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: creatorwatch-license
  template:
    metadata:
      labels:
        app: creatorwatch-license
    spec:
      containers:
        - name: license-server
          image: raoshahzaib/creatorwatch-license:v0.5.4
          ports:
            - containerPort: 5001
