apps/creatorwatch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creatorwatch-license
  namespace: creatorwatch
spec:
  selector:
    app: creatorwatch-license
  ports:
    - port: 80
      targetPort: 5001
